# multipod

./: .gitignore  ChangeLog.md  README.md  multipod.cabal  package.yaml  stack.yaml
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
src/: Application.hs  Foundation.hs  Import.hs  Model.hs  Multipod.hs  Settings.hs  main.hs
src/Handler/: Episode.hs  HandlePodcasts.hs  Home.hs  Podcast.hs  ReadEpisode.hs  RemovePodcast.hs
src/Import/: Network.hs  PodcastReader.hs
src/Multipod/: App.hs  Commands.hs  Core.hs  Handlers.hs  Network.hs  PodcastData.hs  PodcastReader.hs  Podcast_Data.hs
templates/: default-layout-early.theseus  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  episode-list.hamlet  homepage.hamlet  homepage.julius  homepage.lucius  homepage.theseus  mark-as-read.julius  podcast.hamlet  podcast.julius  podcast.lucius  podcast.theseus  remove-podcast.julius
test/: TestImport.hs
test/Handler/: CommonSpec.hs  HomeSpec.hs  PodcastSpec.hs
