name:                multipod
version:             0.0.0.1
synopsis:            A basic podcatcher.
-- description:         Please see README.md
-- homepage:            https://github.com/Daiwen/multipod#readme
license:             GPL-3
license-file:        LICENSE
author:              Quentin Lambert
maintainer:          lambert.quentin@gmail.com
copyright:           2016 Quentin Lambert
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable multipod
  main-is:             Multipod.hs
  other-modules:       Multipod.App
                      ,Multipod.Core
                      ,Multipod.Network
                      ,Multipod.PodcastData
                      ,Multipod.PodcastReader

  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                      ,HTTP
                      ,xml
                      ,directory
                      ,text
                      ,mtl
                      ,exceptions
                      ,network-uri
                      ,unix
                      ,persistent
                      ,persistent-sqlite
                      ,persistent-template
                      ,monad-control
                      ,transformers-base
                      ,monad-logger
                      ,yesod
  hs-source-dirs:      src
  default-language:    Haskell2010
